--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".CustomApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,18 +13,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Notify"
         tools:targetApi="31">
+
         <activity
-            android:name="com.example.gratitude.dashboard.DashboardActivity"
+            android:name=".dashboard.onboarding.OnboardingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".dashboard.DashboardActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
