--- a/build.gradle
+++ b/build.gradle
@@ -8,5 +8,6 @@ buildscript {
         classpath("com.google.dagger:hilt-android-gradle-plugin:2.48")
         classpath("com.google.gms:google-services:4.4.2")
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.7.3")
+        classpath libs.kotlin.gradle.plugin
     }
 }
