--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Notify"
         tools:targetApi="31">
-
         <activity
-            android:name=".dashboard.onboarding.OnboardingActivity"
+            android:name=".ui.fragments.onboarding.OnboardingStepsActivity"
             android:exported="false" />
         <activity
-            android:name=".dashboard.DashboardActivity"
+            android:name=".ui.fragments.welcomepage.WelcomePageActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.DashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 
 </manifest>
