--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
 
     // Reaction Library
     implementation "com.github.pgreze:android-reactions:1.6"
+
+    //flexbox
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
