--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Notify"
         tools:targetApi="31">
         <activity
+            android:name=".ui.fragments.dashboard.DashboardActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.fragments.onboarding.OnboardingStepsActivity"
             android:exported="false" />
         <activity
